Amélioration UI/UX

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     </section>
     <section id="tab-parameters" class="grid-3 has-gutter tabs-content-item" style="display: none;"> <!-- Section : Configuration -->
         <div>
-            <button id="addToCart" title="Ajouter au panier"><img class="carre-40" src="bootstrap-icons/icons/bag-plus-fill.svg"></button>
-            <button id="unlinkCart" class="hidden" title="Annuler la sélection"><img class="carre-40" src="bootstrap-icons/icons/x-circle-fill.svg"></button>
-            <button id="removeFromCart" class="hidden" title="Supprimer du panier"><img class="carre-40" src="bootstrap-icons/icons/bag-dash-fill.svg"></button>
+            <button id="addToCart" title="Ajouter au panier"><img class="carre-40" src="/bootstrap-icons/icons/bag-plus-fill.svg"></button>
+            <button id="unlinkCart" class="hidden" title="Annuler la sélection"><img class="carre-40" src="/bootstrap-icons/icons/x-circle-fill.svg"></button>
+            <button id="removeFromCart" class="hidden" title="Supprimer du panier"><img class="carre-40" src="/bootstrap-icons/icons/bag-dash-fill.svg"></button>
             <h1><i class="icon-arrow--right"></i>Activité <span id="param-title-act"></span></h1>
             <div id="activityTitle"></div>
             <div id="activityDescription"></div>
@@ -179,8 +179,8 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
             </div>
             <div id="cartscontainer">
                 <section id="cart0" class="cartcontent">
-                    <button id="btncartclose1" class="cart-close" title="Vider le panier"><img src="img/recyclecart.png"></button>
-                    <img src="img/iconfinder_copy.png" class="pointer cartduplicate" title="Dupliquer le panier" id="imgduplicatecart1">
+                    <button id="btncartclose1" class="cart-close" title="Vider le panier"><img src="/bootstrap-icons/icons/cart-dash.svg"></button>
+                    <img src="/bootstrap-icons/icons/cart-plus.svg" class="pointer cartduplicate" title="Dupliquer le panier" id="imgduplicatecart1">
                     <h3 contenteditable="true" title="Cliquer pour éditer" id="titlecart1">Groupe 1</h3>
                     <div class="totaux">
                         <div class="title" title="Durée totale du panier">Durée</div>
@@ -201,9 +201,9 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     </ul>
                 </section>
                 <section id="cart1" class="hidden">
-                    <button class="cart-close" id="btncartdelete2" title="Supprimer le panier"><img src="img/burnCart.png"></button>
-                    <button class="cart-close" id="btncartclose2" title="Vider le panier"><img src="img/recyclecart.png"></button>
-                    <img src="img/iconfinder_copy.png" class="pointer cartduplicate" title="Dupliquer le panier" id="imgduplicatecart2">
+                    <button class="cart-close" id="btncartdelete2" title="Supprimer le panier"><img src="/bootstrap-icons/icons/cart-x-fill.svg"></button>
+                    <button class="cart-close" id="btncartclose2" title="Vider le panier"><img src="/bootstrap-icons/icons/cart-dash.svg"></button>
+                    <img src="/bootstrap-icons/icons/cart-plus.svg" class="pointer cartduplicate" title="Dupliquer le panier" id="imgduplicatecart2">
                     <h3 contenteditable="true" title="Cliquer pour éditer" id="titlecart2">Groupe 2</h3>
                     <div class="totaux">
                         <div class="title" title="Durée totale du panier">Durée</div>
@@ -224,9 +224,9 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     </ul>
                 </section>
                 <section id="cart2" class="hidden">
-                    <button class="cart-close" id="btncartdelete3" title="Supprimer le panier"><img src="img/burnCart.png"></button>
-                    <button class="cart-close" id="btncartclose3" title="Vider le panier"><img src="img/recyclecart.png"></button>
-                    <img src="img/iconfinder_copy.png" class="pointer cartduplicate" title="Dupliquer le panier" id="imgduplicatecart3">
+                    <button class="cart-close" id="btncartdelete3" title="Supprimer le panier"><img src="/bootstrap-icons/icons/cart-x-fill.svg"></button>
+                    <button class="cart-close" id="btncartclose3" title="Vider le panier"><img src="/bootstrap-icons/icons/cart-dash.svg"></button>
+                    <img src="/bootstrap-icons/icons/cart-plus.svg" class="pointer cartduplicate" title="Dupliquer le panier" id="imgduplicatecart3">
                     <h3 contenteditable="true" id="titlecart3" title="Cliquer pour éditer">Groupe 3</h3>
                     <div class="totaux">
                         <div class="title" title="Durée totale du panier">Durée</div>
@@ -247,8 +247,8 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     </ul>
                 </section>
                 <section id="cart3" class="hidden">
-                    <button class="cart-close" id="btncartdelete4" title="Supprimer le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-x-fill"></i></h1><span class="etat-cache"><img src="img/burnCart.png"></span></button>
-                    <button class="cart-close" id="btncartclose4" title="Vider le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
+                    <button class="cart-close" id="btncartdelete4" title="Supprimer le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-x-fill"></i></h1><span class="etat-cache"><img src="/bootstrap-icons/icons/cart-x-fill.svg"></span></button>
+                    <button class="cart-close" id="btncartclose4" title="Vider le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="/bootstrap-icons/icons/cart-dash.svg"></span></button>
                     <h3 contenteditable="true" id="titlecart4" title="Cliquer pour éditer">Groupe 4</h3>
                     <div class="totaux">
                         <div class="title" title="Durée totale du panier">Durée</div>
