Quelques petits bugs corrigés et des activités revues, dont celle sur la trigo très mal alembiquée. Merci M. Deterville pour votre patience

--- a/courseauxnombres.html
+++ b/courseauxnombres.html
@@ -31,11 +31,9 @@
                 <button onclick="window.print();" title="Cliquer pour imprimer ou enregistrer en pdf">Print</button>
                 | Énoncés : 
                 <input type="number" min="1" id="nbFiches" size="3">
-                | Entête : <button id="btnedit">éditer</button> <button id="btncopy">copier</button>
+                | Entête : <button id="btnedit" title="Modifier l'entête des courses">éditer</button> <button id="btncopy" title="Copier les modifications dans toutes les courses">copier</button>
                 | <button title="Mélanger les lignes de questions" id="btnshuffle">Mélanger</button>
-                | Corrigé :
-                <button id="toggleCorriges"> ▼ </button>
-                <spaan id="btpCorrigePlace"></spaan>
+                <button id="btneditcontent" title="Modifier le contenu d'une course">Éditer</button>
                 | Police :
             </section>
             <section id="tab-accueil" class="noprint"></section>
