Dissociation de la version minifié

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <link href="js/libs/katex/katex.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/knacss.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/bulma-steps.min.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/mathsmentales.min.css?v=9" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/mathsmentales.css?v=9" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/mem-projector.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="js/libs/JSXGprah1.2.2/jsxgraph.css" type="text/css" />
     <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.css">
