--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 <button class="button--inverse tooltip beaubutton" id="btn-ex-adresse">Adresse/QRCode
                     <span class="tooltiptext">Copie l'adresse de<br>la fiche dans<br>le presse papier</span>
                 </button>
-                <button class="button--success tooltip beaubutton" id="btn-ex-copytohistoric">→ Historique
+                <button class="button--success tooltip beaubutton" id="btn-ex-copytohistoric">Ajouter à l'historique
                     <span class="tooltiptext">Copie la fiche<br>dans l'historique</span>
                 </button>    
             </section>
@@ -481,7 +481,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 <button class="button--inverse tooltip beaubutton" id="btn-can-adresse">Adresse/QRCode
                     <span class="tooltiptext">Copie l'adresse de<br>la course dans<br>le presse papier</span>
                 </button>
-                <button class="button--success tooltip beaubutton" id="btn-can-copytohistoric">→ Historique
+                <button class="button--success tooltip beaubutton" id="btn-can-copytohistoric">Ajouter à l'historique
                     <span class="tooltiptext">Copie la course<br>dans l'historique</span>
                 </button>
             </section>
@@ -530,10 +530,11 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 <select name="duelbackground" id="duelbackgroundselect">
                     <option value="vs" selected>VS</option>
                     <option value="space">Espace</option>
-                    <option value="foret">Forêt</option>
+                    <!--<option value="foret">Forêt</option>-->
                     <option value="marais">Marais</option>
                     <option value="hangar">Hangar</option>
-                    <option value="saloon">Saloon</option>
+                    <option value="sci-fi">Science fiction</option>
+                    <!--<option value="saloon">Saloon</option>-->
                     <option value="desert">Désert</option>
                     <option value="nightdesert">Désert la nuit</option>
                 </select><br><br>
@@ -560,7 +561,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 </button>                <button class="button--inverse tooltip beaubutton" id="btn-duel-adresse">Adresse/QRCode
                     <span class="tooltiptext">Copie l'adresse <br>du duel dans<br>le presse papier</span>
                 </button>
-                <button class="button--success tooltip beaubutton" id="btn-duel-copytohistoric">→ Historique
+                <button class="button--success tooltip beaubutton" id="btn-duel-copytohistoric">Ajouter à l'historique
                     <span class="tooltiptext">Copie le duel<br>dans l'historique</span>
                 </button>
             </section>
