Changement de charte graphique

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 fractions, fonctions, géométrie, calcul littéral, variable, aléatoire" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maths et Matic Projector, votre plateforme de calcul mentales en classe</title>
-    <link rel="apple-touch-icon" sizes="72x72" href="img/logo-72.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="img/logo-144.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://u.jimcdn.com/cms/o/sef6091d0cde7bfc1/img/favicon.png?t=1607971695" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/img/favicon/android-chrome-512x512.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/img/favicon/favicon.ico" />
     <!--<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png" />-->
     <link rel="manifest" href="manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
@@ -53,7 +53,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
 <body>
     <div id="app-container">
 <header>
-    <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iab12671144a446f3/version/1607970976/image.png" alt="logo" width="32" /></a>
+    <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" style="border-radius: 5px;" src="/img/Logo MeM fb.png" alt="logo" width="32" /></a>
     <!--<input type="checkbox" id="btnnav">
     <label for="btnnav">
         <img src="img/iconfinder_menu-alt_134216.svg">
@@ -126,7 +126,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
              }
               </script>
             </div>
-            <img alt="logo" src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iacfaba7d247d2f62/version/1612443176/image.png" width="160" class="logoMM">
+            <img alt="logo" src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iacfaba7d247d2f62/version/1656328888/image.png" width="160" class="logoMM">
             <p>
                 <b>Maths et Matic Projector</b> votre plateforme de calcul mentales en classe
              </p>
