Correction d'un bug sur l'omnipanel de l'activité

--- a/index.html
+++ b/index.html
@@ -640,9 +640,9 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
 </div>
 <div id="slideshow-container" class="hidden">
     <header>
-        <button title="Tout arrêter" id="stop-all"><h1><i class="bi bi-stop-btn-fill"></i></h1><!--<img alt="Stop" src="img/slider-stop.png">--></button>
-        <button title="Tout mettre en pause" id="pause-all"><h1><i class="bi bi-pause-btn-fill"></i></h1><span style="display: none;"><img alt="Pause" src="img/slider-pause.png"></span></button>
-        <button title="Passer à la suivante pour tous" id="next-all"><h1><i class="bi bi-skip-end-btn-fill"></i></h1><!--<img alt="Next" src="img/slider-next.png">--></button>
+        <button title="Tout arrêter" id="stop-all"><img class="carre-48" alt="Stop" src="/bootstrap-icons/icons/stop-btn-fill.svg"></button>
+        <button title="Tout mettre en pause" id="pause-all"><img class="carre-48" alt="Pause" src="/bootstrap-icons/icons/pause-btn-fill.svg"></button>
+        <button title="Passer à la suivante pour tous" id="next-all"><img class="carre-48" alt="Next" src="/bootstrap-icons/icons/skip-end-btn-fill.svg"></button>
     </header>
     <section id="slideshow"></section>
 </div>
