Grosse mise à jour

--- a/ceinture.html
+++ b/ceinture.html
@@ -20,8 +20,8 @@
         <script src="js/libs/algebrite/algebrite.bundle-for-browser.min.js" type="text/javascript" defer></script>
         <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
         <script src="js/libs/chartjs/Chart.bundle.min.js" defer></script>
-
-        <script type="module" src="js/lib.ceinture.js"></script>
+        <script src="js/lib.ceinture.min.js"></script>
+        <!--<script type="module" src="dist/ceinture.bundle.js"></script>-->
     </head>  
     <body size="A4">
         <button onclick="document.getElementById('creator-menu').classList.toggle('hidden')" class="noprint" style="position: absolute;left:0;top:0;width:18pt;height:18pt;">🛠</button>
