--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="js/libs/katex/katex.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/knacss.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/bulma-steps.min.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="css/mathsmentales.min.css?v=10" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/mathsmentales.min.css?v=11" type="text/css" media="screen" />
     <link rel="stylesheet" href="js/libs/JSXGprah1.2.2/jsxgraph.css" type="text/css" />
     <script src="js/libs/katex/katex.min.js" type="text/javascript" defer></script>
     <script src="js/libs/asciimath2tex/asciimath2tex.min.js" defer></script>
@@ -36,7 +36,9 @@
     <script src="js/libs/kas.min.js" defer></script>
     <script src="js/MM1toMM2.min.js" defer></script>
     <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
-    <script src="js/lib.mathsmentales.js?v=43" type="module" id="mmscriptid"></script>
+<!--<script src="dist/mathsmentales.bundle.js" id="mmscriptid"></script>-->
+    <script src="js/lib.mathsmentales.js?v=46" type="module" id="mmscriptid"></script>
+
 </head>
 <body>
     <div id="app-container">
@@ -70,6 +72,7 @@
                 <ul>
                     <li data-niv="2">2nde</li>
                     <li data-niv="G">1ère Générale</li>
+                    <li data-niv="K">1ère Techno</li>
                     <li data-niv="T">Tale</li>
                 </ul>
             </li>
@@ -116,14 +119,13 @@
         </section>
         <h2 class="sg-title">Lycée</h2>
         <section id="grille-lycee" class="grille lycee">
-            <article></article>
         </section>
     </section>
     <section id="tab-parameters" class="grid-3 has-gutter tabs-content-item" style="display: none;">
         <div>
-            <button id="addToCart" title="Ajouter au panier"><img src="img/addtocart.png"></button>
-            <button id="unlinkCart" class="hidden" title="Désolidariser l'édition du panier"><img src="img/iconfinder_pin.png"></button>
-            <button id="removeFromCart" class="hidden" title="Supprimer du panier"><img src="img/removefromcart.png"></button>
+            <button id="addToCart" title="Ajouter au panier"><img src="img/addtocart.png"><br>Ajouter<br>au panier</button>
+            <button id="unlinkCart" class="hidden" title="Désolidariser l'édition du panier"><img src="img/iconfinder_pin.png"><br>Désolidariser<br>du panier</button>
+            <button id="removeFromCart" class="hidden" title="Supprimer du panier"><img src="img/removefromcart.png"><br>Retirer<br>du panier</button>
             <h1><i class="icon-arrow--right"></i>Activité <span id="param-title-act"></span></h1>
             <div id="activityTitle"></div>
             <div id="activityDescription"></div>
@@ -163,6 +165,7 @@
                     </div>
                     <ul id="cart0-list" class="cart-list">
                     </ul>
+                    Si vous voulez utiliser plus d'une activité dans votre séance, ajouter les ici pour composer un panier.
                 </section>
                 <section id="cart1" class="hidden">
                     <button class="cart-close" id="btncartdelete2" title="Supprimer le panier"><img src="img/burnCart.png"></button>
@@ -622,7 +625,7 @@
     <section id="tab-chercher" class="tabs-content-item" style="display: none;">
         <div class="flex-container">
             <div>
-                <input type="text" placeholder="Mot clé (au moins 3 caractères)" id="searchinput">
+                <input type="text" placeholder="Mots clés (au moins 3 car.)" id="searchinput"> <button id="btn-addToCart" title="Ajouter la sélection au panier">Au panier</button> <input type="number" id="addToCartNbq" min="1" max="20" value="2" size="3" title="Nombre de questions par activité de la sélection">
             </div>
             <div id="searchLevels" class="flex-container"></div>
         </div>
