--- a/exercices.html
+++ b/exercices.html
@@ -20,7 +20,7 @@
         <script src="js/libs/algebrite/algebrite.bundle-for-browser.min.js" type="text/javascript" defer></script>
         <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
         <script src="js/libs/chartjs/Chart.bundle.min.js" defer></script>
-        <script src="js/lib.exercices.min.js"></script>
+        <script type="module" src="js/lib.exercices.min.js"></script>
         <!--<script type="module" src="dist/exercices.bundle.js"></script>-->
     </head>  
     <body size="A4">
@@ -34,7 +34,7 @@
                 <button id="fichesSeparation" title="Regrouper ou Séparer les fiches d'exercices">Séparer</button>
                 | Corrigé :
                 <button id="toggleCorriges"> ▼ </button>
-                <spaan id="btpCorrigePlace"></spaan>
+                <span id="btpCorrigePlace"></span>
                 | Police :
             </section>
             <section id="tab-accueil" class="noprint"></section>
