--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <ul>
                     <li data-niv="2">2nde</li>
                     <li data-niv="G">1ère Générale</li>
-                    <li data-niv="K">1ère Techno</li>
+                    <li data-niv="K">1ère/Tale Techno</li>
                     <li data-niv="T">Tale</li>
                 </ul>
             </li>
