--- a/dominos.html
+++ b/dominos.html
@@ -20,7 +20,7 @@
         <script src="js/libs/algebrite/algebrite.bundle-for-browser.min.js" type="text/javascript" defer></script>
         <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
         <script src="js/libs/chartjs/Chart.bundle.min.js" defer></script>
-        <script src="js/lib.dominos.min.js"></script>
+        <script type="module" src="js/lib.dominos.min.js"></script>
         <!--<script type="module" src="dist/dominos.bundle.js"></script>-->
     </head>  
     <body size="A4">
