--- a/duel.html
+++ b/duel.html
@@ -17,7 +17,7 @@
         <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
         <script src="js/libs/chartjs/Chart.bundle.min.js" defer></script>
         <script src="js/libs/mathlive/mathlive.min.js"></script>
-        <script src="js/lib.duel.min.js"></script>
+        <script type="module" src="js/lib.duel.min.js"></script>
         <!--<script type="module" src="dist/duel.bundle.js"></script>-->
     </head>  
     <body>
